feat: the store is configured through a builder, and the surface is sealed
SecretStore.forApplication(...).inNamespace(...).open() replaces
TieredSecretStore.forMachine, and that class drops to package-private. Two
adjacent same-typed naming inputs could swap silently, so each now arrives at a
method that names it.

Both places that hold a credential in the clear are opt-in, on when a call names
them. The operating system's own store stays automatic wherever the platform
offers one, being the one place that needs no such refusal.

The platform package publishes four types rather than six, each binding
implementation hidden behind a factory, so no native signature is a
compatibility promise. module-info.java exports only photos.sluice.secrets.
Surefire runs the tests on the classpath, where their package-private access
across the tree still resolves.

docs/design.md is cut to the library itself. The plan, the alternatives each
decision beat and the Sluice adoption ledger move to a gitignored tmp/, all of
which dies at the first release.

Claude-Session: https://claude.ai/code/session_01EmKpEDUvaBbUrCU2XrauiL